<resources>
    <string name="app_name">Slick Pick</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_button_press">ButtonPress</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_join">Join</string>
    <string name="facebook_app_id">217701851953852</string>

    <!-- Strings related to register  -->
    <string name="register_title">Join with Email</string>

    <!-- Strings related to login -->
    <string name="login_title">Log in with Email</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Login</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="user_id_hint"> Enter User ID</string>
    <string name="email_hint">Enter email</string>
    <string name="password_hint">Enter password</string>
    <string name="register_user">Register</string>
    <string name="add_asker">Find Asker</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="LOGIN_PREFS">tcss450.uw.edu.mainproject.PREFS</string>
    <string name="LOGGEDIN">loggedin</string>
    <string name="USERID">userid</string>
    <string name="action_logout">Logout</string>
    <string name="LOGIN_FILE">tcss450.uw.edu.mainproject.LOGIN_FILE</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_view_groups">ViewGroups</string>


</resources>
